--- a/i18n/dev-localization.json
+++ b/i18n/dev-localization.json
@@ -1,10 +1,12 @@
 {
   "serverSelector": {
     "button": {
-      "connect": "Connect!"
+      "connect": "Connect!",
+      "openLogFile": "Open Logfile"
     },
     "title": {
-      "serverAddress": "Server Address"
+      "serverAddress": "Server Address",
+      "logFile": "Log File"
     },
     "placeHolder": {
       "serverAddress": "Acrolinx Server Address"
@@ -13,7 +15,9 @@
       "headerLogo": "www.acrolinx.com"
     },
     "message": {
-      "serverConnectionProblem": "We couldn't establish a connection to your server. \n\nEither your server isn't set up to accept secure connections or it's not running at all.\n\nIf you're using Acrolinx in a web application, your server might not be set up for cross-origin resource sharing (CORS). \n\nIf you're sure you entered the correct address, ask your server administrator to check your server availability."
+      "serverConnectionProblem": "We couldn't establish a connection to your server. \n\nEither your server isn't set up to accept secure connections or it's not running at all.\n\nIf you're using Acrolinx in a web application, your server might not be set up for cross-origin resource sharing (CORS). \n\nIf you're sure you entered the correct address, ask your server administrator to check your server availability.",
+      "serverIsNotSecure": "The server isn't secure. You must connect to a secure server. A secure server address starts with \"https\" .",
+      "invalidServerAddress": "This doesn't look like a URL. Check the address for any mistakes and try again."
     }
   }
 }
