DEV-11225: Localize new fancy Server Address only screen into DE/EN/FR/SV/JA Trigger .transifex

--- a/i18n/dev-localization.json
+++ b/i18n/dev-localization.json
@@ -1,7 +1,7 @@
 {
   "serverSelector": {
     "button": {
-      "connect": "Connect!",
+      "connect": "Connect!!",
       "openLogFile": "Open Logfile"
     },
     "title": {
