DEV-12783: Server selector should visualze if an HTTPS server is required

--- a/i18n/dev-localization.json
+++ b/i18n/dev-localization.json
@@ -20,7 +20,8 @@
       "serverAddress": "Server Address"
     },
     "tooltip": {
-      "headerLogo": "www.acrolinx.com"
+      "headerLogo": "www.acrolinx.com",
+      "httpsRequired": "You need to connect to a secure server. A secure server address starts with \"https\"."
     }
   }
 }
