DEV-11282: Move Sidebar Edition Options to Sidebar
* L10N

--- a/i18n/dev-localization.json
+++ b/i18n/dev-localization.json
@@ -19,10 +19,20 @@
     },
     "title": {
       "logFile": "Log File",
-      "serverAddress": "Server Address"
+      "serverAddress": "Server Address",
+      "about": "About"
     },
     "tooltip": {
       "httpsRequired": "You need to connect to a secure server. A secure server address starts with \"https\"."
+    },
+    "aboutItems": {
+      "browserInformation": "Browser Information",
+      "startPageCorsOrigin": "Start Page Cors Origin"
+    },
+    "links": {
+      "about": "About Acrolinx",
+      "cantConnect": "Can't connect?",
+      "needHelp": "Need help?"
     }
   }
 }
