DEV-11282: Move Sidebar Edition Options to Sidebar
* Display logFileLocation as about item

--- a/i18n/dev-localization.json
+++ b/i18n/dev-localization.json
@@ -2,6 +2,7 @@
   "serverSelector": {
     "aboutItems": {
       "browserInformation": "Browser Information",
+      "logFileLocation": "Log File Location",
       "startPageCorsOrigin": "Start Page Cors Origin"
     },
     "button": {
