DEV-11282: Move Sidebar Edition Options to Sidebar
* L10N: serverSelector.aboutItems.serverSelector

--- a/i18n/dev-localization.json
+++ b/i18n/dev-localization.json
@@ -3,7 +3,8 @@
     "aboutItems": {
       "browserInformation": "Browser Information",
       "logFileLocation": "Log File Location",
-      "startPageCorsOrigin": "Start Page Cors Origin"
+      "startPageCorsOrigin": "Start Page Cors Origin",
+      "serverSelector": "Server Selector"
     },
     "button": {
       "connect": "Connect",
