DEV-12833: Given failed connection, Sidebar start page should show CORS address in error message details
* L10N: serverSelector.button.details

--- a/i18n/dev-localization.json
+++ b/i18n/dev-localization.json
@@ -8,7 +8,8 @@
     },
     "button": {
       "connect": "Connect",
-      "openLogFile": "Open Log File"
+      "openLogFile": "Open Log File",
+      "details": "Details"
     },
     "links": {
       "about": "About Acrolinx",
