--- a/i18n/dev-localization.json
+++ b/i18n/dev-localization.json
@@ -24,7 +24,8 @@
       "serverConnectionProblemTimeoutHttp": "It looks like we couldn't connect to your Acrolinx server.\n\nWe\u2019re not sure what happened, but it might be that your server doesn\u2019t accept insecure connections or it's not running at all. It could also be that your connection is too slow.\n\nAsk your server administrator to check your server availability if you're sure that the server address is correct.",
       "serverConnectionProblemTimeoutHttps": "It looks like we couldn't connect to your Acrolinx server. \n\nWe\u2019re not sure what happened, but it might be that your server doesn\u2019t accept secure connections or it's not running at all. It could also be that your connection is too slow.\n\nAsk your server administrator to check your server availability if you're sure that the server address is correct.",
       "serverIsNoAcrolinxServerOrHasNoSidebar": "It looks like the server we tried to connect to isn\u2019t an Acrolinx server or that the server version doesn't support the Sidebar. Ask your server administrator to check your Acrolinx server version if you're sure that the server address is correct.",
-      "serverIsNotSecure": "You need to connect to a secure server. A secure server address starts with \"https\"."
+      "serverIsNotSecure": "You need to connect to a secure server. A secure server address starts with \"https\".",
+      "outdatedServer": "Your server is outdated."
     },
     "placeHolder": {
       "serverAddress": "Acrolinx server address"
