DEV-13326 Help link needs to appear at top of sidebar/start page for easy accessibility
* Added tooltip

--- a/i18n/dev-localization.json
+++ b/i18n/dev-localization.json
@@ -38,7 +38,8 @@
       "serverAddress": "Server Address"
     },
     "tooltip": {
-      "httpsRequired": "You need to connect to a secure server. A secure server address starts with \"https\"."
+      "httpsRequired": "You need to connect to a secure server. A secure server address starts with \"https\".",
+      "openHelp": "Open Help"
     }
   }
 }
