DEV-12833 Slow server connection might cause the sidebar to load for ever without possibility to return to start page

--- a/i18n/dev-localization.json
+++ b/i18n/dev-localization.json
@@ -23,7 +23,8 @@
       "serverConnectionProblemHttp": "We couldn't connect to your Acrolinx Server. Check that the server address is correct. If you still can't connect then contact your Acrolinx Server administrator. It might be that your server doesn\u2019t accept insecure connections.",
       "serverConnectionProblemHttps": "We couldn't connect to your Acrolinx Server. Check that the server address is correct. If you still can't connect then contact your Acrolinx Server administrator. It might be that your server doesn\u2019t accept secure connections.",
       "serverIsNoAcrolinxServerOrHasNoSidebar": "It looks like this isn\u2019t an Acrolinx Server or this server version doesn't support the Sidebar. Ask your server administrator to check your server version if you're sure that the server address is correct.",
-      "serverIsNotSecure": "You need to connect to a secure server. A secure server address starts with \"https\"."
+      "serverIsNotSecure": "You need to connect to a secure server. A secure server address starts with \"https\".",
+      "loadSidebarTimeout": "It looks like the Sidebar took too long to load. Check your network connection or contact your Acrolinx Server administrator."
     },
     "placeHolder": {
       "serverAddress": "Acrolinx Server address"
