--- a/i18n/en-US-localization.json
+++ b/i18n/en-US-localization.json
@@ -14,7 +14,9 @@
     "links": {
       "about": "About Acrolinx",
       "cantConnect": "Can't connect to Acrolinx?",
-      "needHelp": "Help"
+      "needHelp": "Help",
+      "submitRequest": "Issues connecting? Submit a Request",
+      "submitRequestUrl": "https://support.acrolinx.com/hc/en-us/requests/new"
     },
     "message": {
       "invalidServerAddress": "It looks like the Acrolinx URL is incorrect. Check the URL and try again.",
