--- a/i18n/fr-FR-localization.json
+++ b/i18n/fr-FR-localization.json
@@ -14,7 +14,9 @@
     "links": {
       "about": "A propos d´Acrolinx",
       "cantConnect": "Vous ne réussissez pas à vous connecter à Acrolinx ?",
-      "needHelp": "Aide"
+      "needHelp": "Aide",
+      "submitRequest": "Issues connecting? Submit a Request",
+      "submitRequestUrl": "https://support.acrolinx.com/hc/en-us/requests/new"
     },
     "message": {
       "invalidServerAddress": "Il semblerait que l'URL d'Acrolinx soit incorrecte. Corriger l'adresse et essayer à nouveau.",
