--- a/i18n/sv-SE-localization.json
+++ b/i18n/sv-SE-localization.json
@@ -14,9 +14,7 @@
     "links": {
       "about": "Om Acrolinx",
       "cantConnect": "Kan du inte ansluta till Acrolinx?",
-      "needHelp": "Hjälp",
-      "submitRequest": "Issues connecting? Submit a Request",
-      "submitRequestUrl": "https://support.acrolinx.com/hc/en-us/requests/new"
+      "needHelp": "Hjälp"
     },
     "message": {
       "invalidServerAddress": "Det ser ut som om Acrolinx-URL:en är felaktig. Kontrollera adressen och försök igen.",
