--- a/i18n/de-DE-localization.json
+++ b/i18n/de-DE-localization.json
@@ -14,9 +14,7 @@
     "links": {
       "about": "Über Acrolinx",
       "cantConnect": "Sie können keine Verbindung zu Acrolinx herstellen?",
-      "needHelp": "Hilfe",
-      "submitRequest": "Probleme beim Verbinden? Anfrage einreichen",
-      "submitRequestUrl": "https://support.acrolinx.com/hc/de/requests/new"
+      "needHelp": "Hilfe"
     },
     "message": {
       "invalidServerAddress": "Ist die Acrolinx-URL korrekt? Überprüfen Sie die eingegebene URL und versuchen Sie es erneut.",
