--- a/i18n/en-US-localization.json
+++ b/i18n/en-US-localization.json
@@ -15,8 +15,7 @@
       "about": "About Acrolinx",
       "cantConnect": "Can't connect to Acrolinx?",
       "needHelp": "Help",
-      "submitRequest": "Issues connecting? Submit a Request",
-      "submitRequestUrl": "https://support.acrolinx.com/hc/en-us/requests/new"
+      "submitRequest": "Issues connecting? Submit a Request"
     },
     "message": {
       "invalidServerAddress": "It looks like the Acrolinx URL is incorrect. Check the URL and try again.",
